--- a/workflows/classify.yml
+++ b/workflows/classify.yml
@@ -1,16 +1,16 @@
 name: Classify Strava Activities
 
 on:
-  workflow_dispatch:      # manueller Start
+  workflow_dispatch:  # ← manueller Start über GitHub UI
   schedule:
-    - cron: '0 * * * *'   # jede Stunde
+    - cron: '0 * * * *'  # ← stündlich
 
 jobs:
-  classify:
+  run-classification:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -19,9 +19,11 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run classification
+      - name: Run classify script
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
